--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-loader": "^1.5.0",
     "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-jsx-a11y": "^2.2.1",
+    "eslint-plugin-react": "^6.2.0",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
